[package]
name = "tdk-lambda-ioc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
emulate = ["async-ringbuf"]

[dependencies]
ferrite = { package = "ferrite-core", path = "ferrite-rs" }
futures = "0.3.25"
tokio = { version = "1.21.2", features = [
    "rt",
    "sync",
    "macros",
    "time",
    "io-util",
] }
tokio-serial = "5.4.4"
request-channel = { git = "https://github.com/agerasev/request-channel.git" }
log = "0.4"
env_logger = "0.9.1"
macro_rules_attribute = "0.1.2"
async-ringbuf = { git = "https://github.com/agerasev/async-ringbuf.git", features = [
    "impl-tokio",
], optional = true }
thiserror = "1.0.37"
pin-project = "1.0.12"

[workspace]
members = ["ferrite-rs"]
