[package]
name = "tdk-lambda-ioc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
tcp = ["tokio/net"]
serial = ["tokio-serial"]
emulator = ["async-ringbuf", "rand", "rand_pcg"]

[dependencies]
ferrite = { package = "ferrite-core", path = "ferrite-rs" }
futures = "0.3.25"
tokio = { version = "1.21.2", features = [
    "rt",
    "sync",
    "macros",
    "time",
    "io-util",
] }
tokio-serial = { version = "5.4.4", optional = true }
request-channel = { git = "https://github.com/agerasev/request-channel.git" }
log = "0.4"
env_logger = "0.9.1"
macro_rules_attribute = "0.1.2"
async-ringbuf = { version = "0.1.1", features = [
    "impl-tokio",
], optional = true }
thiserror = "1.0.37"
pin-project = "1.0.12"
rand = { version = "0.8.5", default-features = false, optional = true }
rand_pcg = { version = "0.3.1", optional = true }

[workspace]
members = ["ferrite-rs"]
